# LightGlue-ONNX-Jetson

./: .gitignore  README.md  build_engines.sh  cast_onnx.py  demo.ipynb  demo_models.ipynb  demo_superpointopen.ipynb  dynamo.py  export.py  infer.py  install_cusparselt.sh  match_engines.py  pyproject.toml
lightglue_dynamo/: __init__.py  __main__.py  cli.py  config.py  viz.py
lightglue_dynamo/extractor_export/: __init__.py  adapter_raco.py  adapter_xfeat.py  export_core.py  registry.py  symbolic.py  trt_export.py  validation.py  wrappers.py
lightglue_dynamo/matcher_export/: __init__.py  export_core.py
lightglue_dynamo/models/: __init__.py  demo_superpointopen.ipynb  lightglue.py  pipeline.py  raco.py  superpoint.py  superpoint_pytorch.py  xfeat.py
lightglue_dynamo/models/aliked/: __init__.py  aliked.py  blocks.py  soft_detect.py
lightglue_dynamo/models/disk/: blocks.py  disk.py  unet.py
lightglue_dynamo/ops/: multi_head_attention.py  shape_utils.py
lightglue_dynamo/preprocessors/: __init__.py  aliked.py  superpoint_open.py
lightglue_dynamo/scripts/: quantize.py
lightglue_onnx/: lightglue.py
notebooks/: 1-export_extractors.ipynb  2-export_trt_extractors.ipynb  3-export_trt_matchers.ipynb
